fix back-to-back text content